--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,22 +1,20 @@
 /* Select the image with a class of kitty-1 */
 
-/*__write_selector_here__*/ {
+  .kitty-1 {
   position: absolute;
   z-index: 1;
   top: 276px;
   left: 129px;
 }
 
-/* Select the image with id of kitty-2 */
-
-/*__write_selector_here__*/ {
+#kitty-2 {
   position: absolute;
   z-index: 2;
   top: 212px;
   left: 369px;
 }
 
-/* Select the image inside the element with an id of basket (using its descendent relationship) */
+#basket img /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
 /*__write_selector_here__*/ {
   position: absolute;
@@ -25,7 +23,7 @@
   left: 319px;
 }
 
-/* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
+#ball + img /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
 /*__write_selector_here__*/ {
   position: absolute;
@@ -34,7 +32,7 @@
   left: 455px;
 }
 
-/* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
+img[alt="Kitty 5"]/* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
 /*__write_selector_here__*/ {
   position: absolute;
